--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,11 @@
     <artifactId>appsuite-http-client</artifactId>
     <version>${revision}</version>
     <packaging>jar</packaging>
+    <!-- project name, description and url -->
     <name>${project.artifactId}</name>
-    <description>The ${project.artifactId} Application</description>
+    <description>The ${project.artifactId} deployment to the Central Repository</description>
+
+    <url>https://github.com/rslakra/appsuite-http-client</url>
 
     <!-- Properties -->
     <properties>
@@ -17,17 +20,20 @@
         <revision>0.0.0</revision>
 
         <!-- sourceEncoding &  outputEncoding -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <defaultEncoding>UTF-8</defaultEncoding>
+        <project.build.sourceEncoding>${defaultEncoding}</project.build.sourceEncoding>
+
+        <project.reporting.outputEncoding>${defaultEncoding}</project.reporting.outputEncoding>
 
         <!-- java version -->
-        <java.version>11</java.version>
+        <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- maven plugins -->
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins -->
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-checkstyle-plugin.version>3.5.0</maven-checkstyle-plugin.version>
         <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
 
         <!-- checkstyle -->
@@ -35,14 +41,14 @@
         <checkstyle.threshold>0</checkstyle.threshold>
 
         <!-- appsuite-core -->
-        <appsuite-core.version>0.0.34</appsuite-core.version>
+        <appsuite-core.version>0.0.58</appsuite-core.version>
 
         <!-- logging -->
         <slf4j-api.version>2.0.6</slf4j-api.version>
         <!--<slf4j-log4j12.version>2.0.6</slf4j-log4j12.version>-->
 
         <!-- lombok -->
-        <lombok.version>1.18.28</lombok.version>
+        <lombok.version>1.18.34</lombok.version>
 
         <!-- json -->
         <nimbus-jose-jwt.version>9.37.3</nimbus-jose-jwt.version>
@@ -310,7 +316,7 @@
 
     </dependencies>
 
-    <!-- profiles -->
+    <!-- Profiles -->
     <profiles>
 
         <!-- snapshot -->
@@ -348,7 +354,7 @@
         <plugins>
 
             <!-- Note:- Don't uncomment this plug-in for the common packages -->
-            <!-- frameworks-boot-maven-plugin -->
+            <!-- spring-boot-maven-plugin -->
             <!--            <plugin>-->
             <!--                <groupId>org.springframework.boot</groupId>-->
             <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
@@ -404,7 +410,7 @@
 
     </build>
 
-    <!-- reporting -->
+    <!-- Reporting -->
     <reporting>
         <!-- plugins -->
         <plugins>
